--- a/battery/main/CMakeLists.txt
+++ b/battery/main/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "main.c" "battery.c" "display.c" "ui.c" "touch.c" "wifi_manager.c" "ntp_time.c" "websocket_client.c"
+idf_component_register(SRCS "main.c" "battery.c" "display.c" "ui.c" "touch.c" "wifi_manager.c" "ntp_time.c" "websocket_client.c" "step_counter.c"
                     INCLUDE_DIRS "."
-                    REQUIRES lvgl esp_lcd driver esp_driver_ledc esp_adc esp_lcd_touch_cst816s cjson nvs_flash esp_http_server esp_wifi esp_netif)
+                    REQUIRES lvgl esp_lcd driver esp_driver_ledc esp_adc esp_lcd_touch_cst816s cjson nvs_flash esp_http_server esp_wifi esp_netif espressif__esp_websocket_client)
